# aegisbot

./: .gitignore  CMakeLists.txt  README.md
src/: AegisBot.cpp  AegisBot.h  Auction.cpp  Guild.cpp  Guild.h  Management.cpp  Module.cpp  Module.h  UserControl.cpp  cppdogstatsd.h  futures.h  main.cpp  mod_announcer.cpp  mod_announcer.h  mod_auction.cpp  mod_auction.h  mod_automod.cpp  mod_automod.h  mod_autoresponder.cpp  mod_autoresponder.h  mod_autoroles.cpp  mod_autoroles.h  mod_bansync.cpp  mod_bansync.h  mod_globalbanlist.cpp  mod_globalbanlist.h  mod_help.cpp  mod_help.h  mod_log.cpp  mod_log.h  mod_moderation.cpp  mod_moderation.h  mod_music.cpp  mod_music.h  mod_perms.cpp  mod_perms.h  mod_tag.cpp  mod_tag.h  mod_timer.cpp  mod_timer.h  (+2 more)
src/redisclient/: redisasyncclient.h  redisbuffer.h  redissyncclient.h  redisvalue.h
src/redisclient/impl/: redisasyncclient.cpp  redisclientimpl.cpp  redisclientimpl.h  redisparser.cpp  redissyncclient.cpp
